# aws-bedrock-knowledge-base

./: .gitignore  Makefile  README.md  bedrock_guardrails.tf  bedrock_kbase.tf  cloudwatch.tf  cloudwatch_dashboard.tf  cloudwatch_logs.tf  cloudwatch_metrics.tf  data.tf  iam_bedrock_logs.tf  iam_kbase.tf  iam_lambda.tf  kbase_invoke_lambda.tf  kbase_sync_lambda.tf  locals.tf  opensearch.tf  providers.tf  pyproject.toml  s3.tf  variables.tf  versions.tf
.devcontainer/: devcontainer.json
src/: kbase_invoke_handler.py  kbase_sync_handler.py
